@@ -4474,6 +4474,11 @@ function eval_pyson(value){
         },
         set_value: function(value) {
             this.input.val(JSON.stringify(value));
+        },
+        // Remove method before merge sao
+        set_readonly: function(readonly) {
+            this._readonly = readonly;
+            this.input.prop('disabled', readonly);
         }
     });
 
